plugins {
    id 'java'
    id 'java-library'
}

dependencies {
    implementation project(':bitcoinj-core')
    implementation project(':bitcoinj-examples')

    testImplementation 'org.slf4j:slf4j-jdk14:2.0.16'
    testImplementation "org.junit.jupiter:junit-jupiter-api:5.11.4"
    testImplementation "org.junit.jupiter:junit-jupiter-params"
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.easymock:easymock:5.5.0'
    testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.18.1'
    testImplementation 'org.hamcrest:hamcrest-library:3.0'
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
    testRuntimeOnly "org.junit.vintage:junit-vintage-engine"
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.release = 17
    options.compilerArgs << '-Xlint:deprecation'
}

javadoc.options.encoding = 'UTF-8'

test {
    useJUnitPlatform()
    exclude 'org/bitcoinj/core/PeerTest*'
    exclude 'org/bitcoinj/core/TransactionBroadcastTest*'
}
